plugins/kotlin/idea/tests/testData/multiModuleLineMarker/fromActualCompanion/jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has expects in common module'")!>WithCompanion<!> {
    actual companion <!LINE_MARKER("descr='Has expects in common module'")!>object<!> {

    }
}
